Fixed navbar row wrapping

--- a/index_style.css
+++ b/index_style.css
@@ -415,7 +415,45 @@ div.panel.show {
     color: grey !important;
 }
 
-
+/*Collapse early to prevent row wrapping*/
+@media (max-width: 1062px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        /*margin: 7.5px -15px;*/
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        /*padding-top: 10px;*/
+        /*padding-bottom: 10px;*/
+    }
+    .navbar-text {
+        float: none;
+        margin: 15px 0;
+    }
+    /* since 3.1.0 */
+    .navbar-collapse.collapse.in { 
+        display: block!important;
+    }
+    .collapsing {
+        overflow: hidden!important;
+    }
+    .navbar-collapse.collapse.in { display: block!important; }
+}
 /*.left {*/
 
 
@@ -726,3 +764,5 @@ fieldset[disabled] .btn-facebook.active {
         padding-top: 15rem;
     }
 }
+
+
